--- a/book/math_foundations/prob/information.ipynb
+++ b/book/math_foundations/prob/information.ipynb
@@ -97,7 +97,7 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Stel dat we een munt opwerpen en kijken naar de binaire uitkomst $\\text{kop}$: $x \\isin {0, 1}$. In dit geval neemt de entropie-formule (gezien de {ref}`complement regel <target-prob-complement-rule>`) volgende vorm aan:\n",
+    "Stel dat we een munt opwerpen en kijken naar de binaire uitkomst $\\text{kop}$: $x \\isin {0, 1}$. In dit geval neemt de entropie-formule (gezien de {ref}`complementregel <target-prob-complement-rule>`) volgende vorm aan:\n",
     "\n",
     "$$\n",
     "H(\\text{x}) = -P(x) \\log P(x) - (1-P(x)) \\log(1-P(x))\n",
@@ -295,17 +295,17 @@
     "3. $D_{KL}(P \\parallel Q) \\neq D_{KL}(Q \\parallel P)$: ⚠️ _Niet_ symmetrisch\n",
     "\n",
     ":::{warning}\n",
-    "Uit (3) volgt dat de KL divergentie {u}`niet als een echte afstandsmaat` mag beschouwd worden. Ze voldoet immers niet aan de driehoeksongelijkheid. De keuze tussen $D_{KL}(P \\parallel Q)$ en $D_{KL}(Q \\parallel P)$ heeft belangrijke consequenties:\n",
+    "Uit (3) volgt dat de KL-divergentie {u}`niet als een echte afstandsmaat` mag worden beschouwd. Ze voldoet immers niet aan de driehoeksongelijkheid. De keuze tussen $D_{KL}(P \\parallel Q)$ en $D_{KL}(Q \\parallel P)$ heeft belangrijke consequenties:\n",
     "\n",
-    "- **$D_{KL}(P \\parallel Q)$** (_foward KL_): Straft waar $Q$ een lage kans heeft en $P$ een hoge.\n",
+    "- **$D_{KL}(P \\parallel Q)$** (_forward KL_): Straft waar $Q$ een lage kans heeft en $P$ een hoge.\n",
     "  \n",
-    "- **$D_{KL}(Q \\parallel P)$** (_reverse KL_): Straft waar $Q$ een hoge lage kans heeft en $P$ lage.\n",
+    "- **$D_{KL}(Q \\parallel P)$** (_reverse KL_): Straft waar $Q$ een hoge kans heeft en $P$ een lage.\n",
     ":::"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "81380e8c",
    "metadata": {
     "tags": [
