--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -13,10 +13,9 @@
     "Kansrekenen, waarschijnlijkheidsleer of **probabiliteitstheorie** is een wiskundig kader om uitspraken te doen over onzekerheid. Het laat toe om onzekerheid te kwantificeren en biedt axioma's om nieuwe onzekere uitspraken af te leiden uit bestaande.\n",
     "\n",
     "> Kans $=$ Waarschijnlijkheid $=$ Probabiliteit\n",
-    "\n",
-    "Bij AI toepassingen gebruiken we kansrekenen op twee manieren:\n",
-    "1. Aangezien de wetten van kansrekenen bepalen hoe AI systemen moeten _redeneren over onzekerheid_, kunnen we bij het ontwerp van modellen handig gebruik maken van verschillende expressies uit de probabiliteitstheorie.  \n",
-    "We zagen reeds hoe we de logistische en {ref}`softmax <target-softmax>` activatiefuncties gebruiken zodat we de output van neurale netwerken kunnen interpreteren als een {ref}`kansverdeling <target-probability-distribution>`. Zo kunnen we de voorspelling met de hoogste kans selecteren en ook nagaan hoe zeker/onzeker voorspellingen zijn. Voor dit laatste kunnen we een beroep doen op {ref}`informatie theorie <target-information-theory>`.  \n",
+    "Bij AI-toepassingen gebruiken we kansrekenen op twee manieren:\n",
+    "1. Aangezien de wetten van kansrekenen bepalen hoe AI-systemen moeten _redeneren over onzekerheid_, kunnen we bij het ontwerp van modellen handig gebruik maken van verschillende expressies uit de probabiliteitstheorie.  \n",
+    "We zagen reeds hoe we de logistische en {ref}`softmax <target-softmax>` activatiefuncties gebruiken zodat we de output van neurale netwerken kunnen interpreteren als een {ref}`kansverdeling <target-probability-distribution>`. Zo kunnen we de voorspelling met de hoogste kans selecteren en ook nagaan hoe zeker/onzeker voorspellingen zijn. Voor dit laatste kunnen we een beroep doen op {ref}`informatietheorie <target-information-theory>`.  \n",
     "We zullen later ook zien dat we probabiliteitstheorie ook kunnen gebruiken om parameterschattingen te bekomen. \n",
     "(target-statistical-analysis)=\n",
     "2. We kunnen probabiliteit ook gebruiken om het gedrag van voorgestelde AI-systemen te _analyseren_. Dit valt onder het domein van **statistische analyse**. Hierbij willen we de probabilistische eigenschappen van een systeem in kaart brengen.  \n",
@@ -34,12 +33,12 @@
     "Het systeem dat gemodelleerd wordt kan intrinsiek willekeurig zijn. Bijvoorbeeld, een kaartspel waarbij de kaarten in een random volgorde zitten.  \n",
     "  \n",
     "2. **Onvolledige observeerbaarheid**  \n",
-    "Zelfs deterministische systemen kunnen stochastisch lijken wanneer we niet alle variabelen kunnen observeren die het gedrag van het systeem bepalen. Een klassiek voorbeeld is het _Monty Hall probleem_: een kandidaat van een spelshow moet kiezen tussen drie deuren en wint een prijs achter de gekozen deur. Twee deuren leiden naar een geit, de derde naar een auto[^monty]. De uitkomst, gegeven de keuze van de kandidaat, is deterministisch, maar vanuit het perspectief van de kandidaat is de uitkomst onzeker.  \n",
+    "Zelfs deterministische systemen kunnen stochastisch lijken wanneer we niet alle variabelen kunnen observeren die het gedrag van het systeem bepalen. Een klassiek voorbeeld is het _Monty Hall-probleem_: een kandidaat van een spelshow moet kiezen tussen drie deuren en wint een prijs achter de gekozen deur. Twee deuren leiden naar een geit, de derde naar een auto[^monty]. De uitkomst, gegeven de keuze van de kandidaat, is deterministisch, maar vanuit het perspectief van de kandidaat is de uitkomst onzeker.  \n",
     "\n",
     "3. **Onvolledige modellering**  \n",
     "Wanneer we een model gebruiken dat sommige geobserveerde informatie moet negeren, resulteert de weggelaten informatie in onzekere voorspellingen. Bijvoorbeeld, als een robot de locatie van alle objecten rond zich exact kan observeren maar de ruimte discretiseert (in cellen opdeelt) bij het voorspellen van toekomstige locaties, dan zijn de voorspellingen automatisch onzeker binnen de dimensies van de cellen.\n",
     "\n",
-    "[^monty]: Het [probleem](https://en.wikipedia.org/wiki/Monty_Hall_problem) gaat over een probabilistische puzzel en werd louter omwille van het thema naar de presentator van de Amerikaanse tv show _Let's Make a Deal_ vernoemd. De oorspronkelijke formulering luidt: _Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, \"Do you want to pick door No. 2?\" Is it to your advantage to switch your choice_\n",
+    "[^monty]: Het [probleem](https://en.wikipedia.org/wiki/Monty_Hall_problem) gaat over een probabilistische puzzel en werd louter omwille van het thema naar de presentator van de Amerikaanse tv-show _Let's Make a Deal_ vernoemd. De oorspronkelijke formulering luidt: _Suppose you're on a game show, and you're given the choice of three doors: Behind one door is a car; behind the others, goats. You pick a door, say No. 1, and the host, who knows what's behind the doors, opens another door, say No. 3, which has a goat. He then says to you, \"Do you want to pick door No. 2?\" Is it to your advantage to switch your choice_\n",
     "\n",
     ":::{important}\n",
     "**In veel situaties is het praktischer om een eenvoudige _onzekere_ regel te gebruiken dan een complexe zekere regel, zelfs als de werkelijke regel deterministisch is**.  \n",
@@ -53,7 +52,7 @@
     "(target-frequentist-probability)=\n",
     "> Deze benadering beschouwt probabiliteit als de relatieve frequentie waarmee gebeurtenissen plaatsvinden en wordt daarom de **{u}`frequentistische`** benadering genoemd.\n",
     "  \n",
-    "Dit soort redeneringen over probabiliteit kunnen we echter niet toepassen bij uitkomsten die _niet herhaalbaar_ zijn. Neem bijvoorbeeld de situatie waarbij een dokter zegt dat er een $40\\%$ kans bestaat dat een patient griep heeft. Hier heeft $p=0.4$ geen betrekking op een frequentie (we kunnen de patiënt niet een oneindig aantal keren repliceren), maar op een bepaalde _mate van geloof_ (_degree of belief_).\n",
+    "Dit soort redeneringen over probabiliteit kunnen we echter niet toepassen bij uitkomsten die _niet herhaalbaar_ zijn. Neem bijvoorbeeld de situatie waarbij een dokter zegt dat er een $40\\%$ kans bestaat dat een patiënt griep heeft. Hier heeft $p=0.4$ geen betrekking op een frequentie (we kunnen de patiënt niet een oneindig aantal keren repliceren), maar op een bepaalde _mate van geloof_ (_degree of belief_).\n",
     "\n",
     "(target-bayesian-probability)=\n",
     "> Deze benadering heet de **{u}`Bayesiaanse`**[^bayes] interpretatie van probabiliteit. Hier heeft probabiliteit betrekking op de **mate van geloof** (_degree of belief_) in een bepaalde hypothese, waarbij $1$ absolute zekerheid aanduidt en $0$ absolute zekerheid dat iets niet het geval is. \n",
@@ -112,7 +111,7 @@
     "3. $\\sum_{x \\in \\text{x}} P(x) = 1$\n",
     "\n",
     "(target-prob-complement-rule)=\n",
-    "🧮 Uit (3) volgt de zogenaamde **complement regel** bij kansrekenen:\n",
+    "🧮 Uit (3) volgt de zogenaamde **complementregel** bij kansrekenen:\n",
     "\n",
     "$$\n",
     "P(\\text{x} \\neq x_i) = 1 - P(\\text{x} = x_i)\n",
@@ -122,19 +121,19 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Een typisch voorbeeld van een discrete kansvariabele is de uitkomst van gooi met een dobbelsteen. Ongeacht het feit of we met een eerlijke of oneerlijke dobbelsteen te maken hebben, zal de uitkomst met 100% zekerheid $1$, $2$, $3$, $4$, $5$ of $6$ zijn: \n",
+    "Een typisch voorbeeld van een discrete kansvariabele is de uitkomst van een gooi met een dobbelsteen. Ongeacht het feit of we met een eerlijke of oneerlijke dobbelsteen te maken hebben, zal de uitkomst met 100% zekerheid $1$, $2$, $3$, $4$, $5$ of $6$ zijn: \n",
     "\n",
     "$$\n",
-    "P(x \\isin (1, 2, 3, 4, 5, 6)) = 1\n",
+    "P(x \\in \\{1, 2, 3, 4, 5, 6\\}) = 1\n",
     "$$\n",
     "\n",
     "Als we naar de kansen op het niveau van de individuele waarden kijken, speelt het al dan niet eerlijk zijn van de dobbelsteen _wel_ een rol.  \n",
     "  \n",
-    "Als de dobbelsteen _eerlijk_ is, zal iedere waarde een gelijke kans hebben om op te treden namelijk $P(x) = \\frac{1}{6}$. Dat volgt uit de eigenschap dat de som van alle kansen $1$ moet zijn en dat we hier op zoek zijn naar een gelijke kans voor iedere waarde:\n",
+    "Als de dobbelsteen _eerlijk_ is, zal iedere waarde een gelijke kans hebben om op te treden, namelijk $P(x) = \\frac{1}{6}$. Dat volgt uit de eigenschap dat de som van alle kansen $1$ moet zijn en dat we hier op zoek zijn naar een gelijke kans voor iedere waarde:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\sum_{x \\in (1,2,3,4,5,6)} P(x) &= 1 \\cr\n",
+    "\\sum_{x \\in \\{1,2,3,4,5,6\\}} P(x) &= 1 \\cr\n",
     "P(\\text{x}=1) + P(\\text{x}=2) + P(\\text{x}=3) + P(\\text{x}=4) + P(\\text{x}=5) + P(\\text{x}=6) &= 1 \\cr\n",
     "6 P(\\text{x}=1) &= 1 \\cr\n",
     "P(\\text{x}=1) & = \\frac{1}{6}\n",
@@ -160,7 +159,7 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\sum_{x \\in (1,2,3,4,5,6)} P(x) &= 1 \\cr\n",
+    "\\sum_{x \\in \\{1,2,3,4,5,6\\}} P(x) &= 1 \\cr\n",
     "P(\\text{x}=1) + P(\\text{x}=2) + P(\\text{x}=3) + P(\\text{x}=4) + P(\\text{x}=5) + P(\\text{x}=6) &= 1 \\cr\n",
     "5 P(\\text{x}=1) + 2 P(\\text{x}=1) &= 1 \\cr\n",
     "P(\\text{x}=1) (5 + 2) & = 1 \\cr\n",
@@ -260,13 +259,13 @@
     "P(x=1) + P(x=3) + P(x=5) + P(x=6) = \\frac{4}{6} = \\frac{2}{3}\n",
     "$$\n",
     "\n",
-    "Dit kunnen we enkel doen omdat we hier te maken hebben met de kans op _niet overlappende_ uitkomsten. Stel dat we de kans op een {u}`oneven waarde of $5$` willen berekenen, dan moeten we er rekening mee houden dat $5$ in beide sets aanwezig is en dus maar één keer geteld mag worden.  \n",
+    "Dit kunnen we enkel doen omdat we hier te maken hebben met de kans op _niet-overlappende_ uitkomsten. Stel dat we de kans op een {u}`oneven waarde of $5$` willen berekenen, dan moeten we er rekening mee houden dat $5$ in beide sets aanwezig is en dus maar één keer geteld mag worden.  \n",
     "\n",
     "(target-prob-sum-rule)=\n",
-    "🧮 De algemene **som regel** bij kansrekenen stelt:\n",
+    "🧮 De algemene **somregel** bij kansrekenen stelt:\n",
     "\n",
     "$$\n",
-    "P(x \\isin A \\cup B) = P(x \\isin A) + P(x \\isin B) - P(x \\isin A \\cap B)\n",
+    "P(x \\in A \\cup B) = P(x \\in A) + P(x \\in B) - P(x \\in A \\cap B)\n",
     "$$\n",
     ":::"
    ]
@@ -406,7 +405,7 @@
    "source": [
     "### Theoretische en empirische kansverdelingen\n",
     "\n",
-    "In het algemene geval, weten we bij observaties van random variabelen, behalve de discrete of continue eigenschap, nooit vooraf met welke kansverdeling we precies te maken hebben. In sommige gevallen wordt zonder meer een assumptie gemaakt, bijvoorbeeld, de aanname dat we met een eerlijke dobbelsteen te maken hebben en de PMF dus neerkomt op:\n",
+    "In het algemene geval weten we bij observaties van random variabelen, behalve de discrete of continue eigenschap, nooit vooraf met welke kansverdeling we precies te maken hebben. In sommige gevallen wordt zonder meer een assumptie gemaakt, bijvoorbeeld de aanname dat we met een eerlijke dobbelsteen te maken hebben en de PMF dus neerkomt op:\n",
     "$$\n",
     "\\begin{aligned}\n",
     "P(\\text{x} = x_i) &= \\frac{1}{k} \\cr\n",
@@ -419,13 +418,13 @@
     "$$\n",
     "Dit zijn beide voorbeelden van _theoretische_ distributies. We zullen later zien dat dergelijke volledig wiskundig beschreven verdelingen interessante implicaties hebben in de context van ML.  \n",
     "    \n",
-    "Als we over {u}`theoretische kansverdelingen` spreken, gaat het telkens over een {u}`hypothese` (de {u}`populatieverdeling` genoemd in de statistiek). In realiteit hebben we altijd te maken met {u}`steekproeven` (_samples_) en steekproefverdelingen. Als we de assumptie maken dat de data een bepaalde theoretische verdeling volgt, betekent dat, dat we ervan uitgaan dat de steekproefverdeling die bepaalde populatieverdeling zal benaderen als we de steekproef oneindig groot maken.  \n",
+    "Als we over {u}`theoretische kansverdelingen` spreken, gaat het telkens over een {u}`hypothese` (de {u}`populatieverdeling` genoemd in de statistiek). In realiteit hebben we altijd te maken met {u}`steekproeven` (_samples_) en steekproefverdelingen. Als we de assumptie maken dat de data een bepaalde theoretische verdeling volgt, betekent dat dat we ervan uitgaan dat de steekproefverdeling die bepaalde populatieverdeling zal benaderen als we de steekproef oneindig groot maken.  \n",
     "  \n",
     "Wanneer we een steekproef nemen, kunnen we de geobserveerde kansen {u}`binnen` de steekproef weergeven.  \n",
     "\n",
-    "Bij een discrete random variabele kunnen we simpelweg voor iedere mogelijke uitkomst de frequentie binnen de steekproef berekenen en visualiseren met een staafdiagram. Bij continue random variabelen maken we meestal gebruikt van een histogram. We berekenen dan de frequenties binnen zelf gekozen intervallen (_bins_).  \n",
+    "Bij een discrete random variabele kunnen we simpelweg voor iedere mogelijke uitkomst de frequentie binnen de steekproef berekenen en visualiseren met een staafdiagram. Bij continue random variabelen maken we meestal gebruik van een histogram. We berekenen dan de frequenties binnen zelf gekozen intervallen (_bins_).  \n",
     "  \n",
-    "In beide gevallen spreken we dan over de {u}`empirische kansverdeling`. Het grote verschil met theoretische verdelingen is dat ze, buiten de algemene eigenschappen van PMFs en PDFs geen verdere wiskundige specificaties hebben. Ze worden dan ook meestal gebruikt om na te gaan met welke theoretische verdeling ze het best overeenkomen zodat met de specificaties van die verdeling verder gewerkt kan worden. "
+    "In beide gevallen spreken we dan over de {u}`empirische kansverdeling`. Het grote verschil met theoretische verdelingen is dat ze, buiten de algemene eigenschappen van PMFs en PDFs, geen verdere wiskundige specificaties hebben. Ze worden dan ook meestal gebruikt om na te gaan met welke theoretische verdeling ze het best overeenkomen zodat met de specificaties van die verdeling verder gewerkt kan worden."
    ]
   },
   {
@@ -437,7 +436,7 @@
     ":icon: false\n",
     ":class: simple\n",
     "Stel dat we te maken hebben met een populatie waarin de lichaamslengte (de continue random variabele $\\text{x}$) een normaalverdeling volgt met gemiddelde $\\mu=175$cm en standaardafwijking $\\sigma=10$cm. Als we daaruit een steekproef nemen, kunnen we gebruik maken van een histogram om de _empirische_ kansverdeling te visualiseren.  \n",
-    "Als we de intervallen (_bins_) van ons histogram te klein maken, gegeven de steekproefgrootte, zullen we bins met een frequentie 0 tegenkomen. De correcte keuze van bin-locaties en breedtes kan een grote rol spelen in de evaluatie van de empirische verdeling (met het oog op een passende theoretische verdeling)\n",
+    "Als we de intervallen (_bins_) van ons histogram te klein maken, gegeven de steekproefgrootte, zullen we bins met een frequentie 0 tegenkomen. De correcte keuze van bin-locaties en -breedtes kan een grote rol spelen in de evaluatie van de empirische verdeling (met het oog op een passende theoretische verdeling).\n",
     ":::"
    ]
   },
@@ -626,7 +625,7 @@
     ":::\n",
     "\n",
     ":::{important}\n",
-    "Uit de definitie van de de conditionele kans volgt dat de gezamenlijke distributie van twee kansvariabelen ontleed kan worden in het product van de conditionele probabiliteit en de marginale probabiliteit:\n",
+    "Uit de definitie van de conditionele kans volgt dat de gezamenlijke distributie van twee kansvariabelen ontleed kan worden in het product van de conditionele probabiliteit en de marginale probabiliteit:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -651,13 +650,13 @@
     "P(x^{(1)}, \\ldots, x^{(n)}) = P(x^{(1)})\\prod_{i=2}^{n}P(x^{(i)}|x^{(1)}, \\ldots, x^{(i-1)})\n",
     "$$\n",
     "\n",
-    "🧮 Deze observatie staat bekend als de **product regel** bij kansrekenen.\n",
+    "🧮 Deze observatie staat bekend als de **productregel** bij kansrekenen.\n",
     ":::\n",
     "\n",
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Hieronder illustreren we het principe van marginale en conditionele kansen in het geval van twee random variabelen die samen een zogenaamde bi-variate Gauss-verdeling vormen. \n",
+    "Hieronder illustreren we het principe van marginale en conditionele kansen in het geval van twee random variabelen die samen een zogenaamde bivariate Gauss-verdeling vormen. \n",
     ":::"
    ]
   },
@@ -813,7 +812,7 @@
     ":::{note} 🌍\n",
     ":icon: false\n",
     ":class: simple\n",
-    "Hieronder illustreren we het principe van onafhankelijkheid in het geval van twee random variabelen die samen een bi-variate Gauss-verdeling vormen met correlatie $\\rho=0$. In dit geval zijn de conditionele en marginale verdelingen identiek.\n",
+    "Hieronder illustreren we het principe van onafhankelijkheid in het geval van twee random variabelen die samen een bivariate Gauss-verdeling vormen met correlatie $\\rho=0$. In dit geval zijn de conditionele en marginale verdelingen identiek.\n",
     ":::"
    ]
   },
@@ -1348,8 +1347,8 @@
     "\n",
     ":::{important}\n",
     "(target-covariance-matrix)=\n",
-    "Bij een vectoriële random variabele $\\pmb{\\text{x}}$ hebben we te maken met een **covariantie-matrix**.\n",
-    "De covariantie-matrix $\\pmb{\\Sigma}$ voor een random vector $\\pmb{x} = (x_1, x_2, \\ldots, x_n)^T$ is een $n \\times n$ symmetrische matrix:\n",
+    "Bij een vectoriële random variabele $\\pmb{\\text{x}}$ hebben we te maken met een **covariantiematrix**.\n",
+    "De covariantiematrix $\\pmb{\\Sigma}$ voor een random vector $\\pmb{x} = (x_1, x_2, \\ldots, x_n)^T$ is een $n \\times n$ symmetrische matrix:\n",
     "\n",
     "$$\n",
     "\\pmb{\\Sigma} = \\text{Cov}(\\pmb{x}) = \\mathbb{E}[(\\pmb{x} - \\pmb{\\mu})(\\pmb{x} - \\pmb{\\mu})^T]\n",
@@ -1369,7 +1368,7 @@
     "### Correlatie\n",
     "\n",
     "(target-correlation)=\n",
-    "De **correlatiecoëfficiënt** (of **Pearson correlatie**) is de genormaliseerde versie van covariantie:\n",
+    "De **correlatiecoëfficiënt** (of **Pearson-correlatie**) is de genormaliseerde versie van covariantie:\n",
     "\n",
     "$$\n",
     "\\rho_{xy} = \\text{Corr}(x, y) = \\frac{\\text{Cov}(x, y)}{\\sigma_x \\sigma_y} = \\frac{\\text{Cov}(x, y)}{\\sqrt{\\text{Var}(x)\\text{Var}(y)}}\n",
@@ -1380,7 +1379,7 @@
     "- $\\rho_{xy} = 1$: Perfecte positieve lineaire relatie ($y = ax + b$ met $a > 0$)\n",
     "- $\\rho_{xy} = -1$: Perfecte negatieve lineaire relatie ($y = ax + b$ met $a < 0$)\n",
     "- $\\rho_{xy} = 0$: Geen lineaire correlatie (variabelen zijn _ongecorreleerd_; niet automatisch onafhankelijk)\n",
-    "- In tegenstelling tot de covariantie, wordt deze maat niet beïnvloed van de schaal van $\\text{x}$ en $\\text{y}$"
+    "- In tegenstelling tot de covariantie wordt deze maat niet beïnvloed door de schaal van $\\text{x}$ en $\\text{y}$"
    ]
   },
   {
