--- a/book/ml_principles/labs/imgrec_taco_train.ipynb
+++ b/book/ml_principles/labs/imgrec_taco_train.ipynb
@@ -55,8 +55,8 @@
           "shell.execute_reply": "2025-04-11T15:36:34.512188Z",
           "shell.execute_reply.started": "2025-04-11T15:36:34.508822Z"
         },
-        "trusted": true,
-        "id": "tUPPpMVVP5M9"
+        "id": "tUPPpMVVP5M9",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -76,25 +76,25 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XFcgXe8gWlHS"
+      },
+      "outputs": [],
       "source": [
         "# Enable TensorBoard logging\n",
         "!yolo settings datasets_dir=/content/taco\n",
         "!yolo settings tensorboard=True"
-      ],
-      "metadata": {
-        "id": "XFcgXe8gWlHS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "⚠️ Om bovenstaande aanpassingen in werking te stellen moet je nu de notebook runtime herstarten"
-      ],
       "metadata": {
         "id": "Y199tGT3icCn"
-      }
+      },
+      "source": [
+        "⚠️ Om bovenstaande aanpassingen in werking te stellen moet je nu de notebook runtime herstarten"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -187,8 +187,8 @@
           "shell.execute_reply": "2025-04-11T15:37:40.356849Z",
           "shell.execute_reply.started": "2025-04-11T15:37:40.353932Z"
         },
-        "trusted": true,
-        "id": "XcynQ0wTP5NL"
+        "id": "XcynQ0wTP5NL",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -212,51 +212,51 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KCeLDS8DS5rO"
+      },
+      "outputs": [],
       "source": [
         "# Initialize YOLOv11 model (pre-trained weights)\n",
         "model = YOLO(\"yolov8s.pt\")\n",
         "\n",
         "# check the architecture\n",
         "# print(model)"
-      ],
-      "metadata": {
-        "id": "KCeLDS8DS5rO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Initialize YOLOv11 model (pre-trained weights)\n",
-        "model = YOLO(\"yolov8s.pt\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "J8BTuiDmabLd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Initialize YOLOv11 model (pre-trained weights)\n",
+        "model = YOLO(\"yolov8s.pt\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Launch Tensorboard for live monitoring."
-      ],
       "metadata": {
         "id": "1uYq_4rmamJW"
-      }
+      },
+      "source": [
+        "Start Tensorboard voor live monitoring."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%load_ext tensorboard\n",
-        "%tensorboard --logdir /content/runs"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "2QxU2dLOak95"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%load_ext tensorboard\n",
+        "%tensorboard --logdir /content/runs"
+      ]
     },
     {
       "cell_type": "code",
@@ -266,8 +266,8 @@
           "iopub.execute_input": "2025-04-11T15:37:40.358856Z",
           "iopub.status.busy": "2025-04-11T15:37:40.358529Z"
         },
-        "trusted": true,
-        "id": "3k5VbQI5P5NN"
+        "id": "3k5VbQI5P5NN",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -290,8 +290,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "ENHObUs-P5NN"
+        "id": "ENHObUs-P5NN",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -318,8 +318,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "4gP-mW-FP5NP"
+        "id": "4gP-mW-FP5NP",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -345,8 +345,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "u3mJjHtoP5NQ"
+        "id": "u3mJjHtoP5NQ",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -427,8 +427,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "dgyteKmNP5NS"
+        "id": "dgyteKmNP5NS",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -440,8 +440,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "r5iJIUBuP5NS"
+        "id": "r5iJIUBuP5NS",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -465,8 +465,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "hQ0rgnnPP5NU"
+        "id": "hQ0rgnnPP5NU",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -500,8 +500,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "eX-ITvZLP5NV"
+        "id": "eX-ITvZLP5NV",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -513,8 +513,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "Fs_6qFFzP5NV"
+        "id": "Fs_6qFFzP5NV",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -529,8 +529,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "trusted": true,
-        "id": "H_GoZJfSP5NW"
+        "id": "H_GoZJfSP5NW",
+        "trusted": true
       },
       "outputs": [],
       "source": [
@@ -678,9 +678,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kaggle": {
       "accelerator": "gpu",
@@ -712,8 +713,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.19"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
