Update course materials for probability and statistics
- Revised the course schedule in the introduction.md to include additional gradient descent topics.
- Added new Jupyter notebooks for probability basics, joint probability, and probability moments, covering key concepts such as random variables, joint distributions, and statistical moments.
- Updated parameters.ipynb to include a reference to the Law of Large Numbers.
- Modified myst.yml to include the new lab notebooks in the project structure.

--- a/book/ml_principles/basics/parameters.ipynb
+++ b/book/ml_principles/basics/parameters.ipynb
@@ -103,6 +103,7 @@
             "id": "d53c47d2",
             "metadata": {},
             "source": [
+                "(target-large-numbers)=\n",
                 ":::{tip} Illustratie\n",
                 ":class: simple\n",
                 "Stel dat we het werkelijke (of populatie-)gemiddelde van een bepaalde variabele willen _schatten_ aan de hand van een steekproef van waarden. Deze illustratie toont hoe het steekproefgemiddelde convergeert naar het populatiegemiddelde naarmate de steekproefgrootte toeneemt. Dit fundamentele concept staat bekend als de _Law of Large Numbers_. Het toont het belang aan van steekproefgroottes om _betrouwbare_ schattingen te maken op basis van data.\n",
