probability basics done

--- a/book/math_foundations/prob/probability.ipynb
+++ b/book/math_foundations/prob/probability.ipynb
@@ -12,7 +12,8 @@
     "(target-probability-theory)=\n",
     "Kansrekenen, waarschijnlijkheidsleer of **probabiliteitstheorie** is een wiskundig kader om uitspraken te doen over onzekerheid. Het laat toe om onzekerheid te kwantificeren en biedt axioma's om nieuwe onzekere uitspraken af te leiden uit bestaande.\n",
     "\n",
-    "> Kans $=$ Waarschijnlijkheid $=$ Probabiliteit\n",
+    "> Kans $=$ Waarschijnlijkheid $=$ Probabiliteit  \n",
+    "  \n",
     "Bij AI-toepassingen gebruiken we kansrekenen op twee manieren:\n",
     "1. Aangezien de wetten van kansrekenen bepalen hoe AI-systemen moeten _redeneren over onzekerheid_, kunnen we bij het ontwerp van modellen handig gebruik maken van verschillende expressies uit de probabiliteitstheorie.  \n",
     "We zagen reeds hoe we de logistische en {ref}`softmax <target-softmax>` activatiefuncties gebruiken zodat we de output van neurale netwerken kunnen interpreteren als een {ref}`kansverdeling <target-probability-distribution>`. Zo kunnen we de voorspelling met de hoogste kans selecteren en ook nagaan hoe zeker/onzeker voorspellingen zijn. Voor dit laatste kunnen we een beroep doen op {ref}`informatietheorie <target-information-theory>`.  \n",
@@ -52,7 +53,7 @@
     "(target-frequentist-probability)=\n",
     "> Deze benadering beschouwt probabiliteit als de relatieve frequentie waarmee gebeurtenissen plaatsvinden en wordt daarom de **{u}`frequentistische`** benadering genoemd.\n",
     "  \n",
-    "Dit soort redeneringen over probabiliteit kunnen we echter niet toepassen bij uitkomsten die _niet herhaalbaar_ zijn. Neem bijvoorbeeld de situatie waarbij een dokter zegt dat er een $40\\%$ kans bestaat dat een patiënt griep heeft. Hier heeft $p=0.4$ geen betrekking op een frequentie (we kunnen de patiënt niet een oneindig aantal keren repliceren), maar op een bepaalde _mate van geloof_ (_degree of belief_).\n",
+    "Dit soort redeneringen over probabiliteit kunnen we echter niet toepassen bij uitkomsten die _niet herhaalbaar_ zijn. Neem bijvoorbeeld de situatie waarbij we zeggen dat er een $40\\%$ kans is dat de nieuwe GTA versie morgen uitkomt. Hier heeft $p=0.4$ geen betrekking op een frequentie (we kunnen de situatie niet een oneindig aantal keren repliceren), maar op een bepaalde _mate van geloof_ (_degree of belief_).\n",
     "\n",
     "(target-bayesian-probability)=\n",
     "> Deze benadering heet de **{u}`Bayesiaanse`**[^bayes] interpretatie van probabiliteit. Hier heeft probabiliteit betrekking op de **mate van geloof** (_degree of belief_) in een bepaalde hypothese, waarbij $1$ absolute zekerheid aanduidt en $0$ absolute zekerheid dat iets niet het geval is. \n",
@@ -294,6 +295,7 @@
     "$$\n",
     "P(x \\in [a,b]) = \\int_a^b p(x)dx\n",
     "$$\n",
+    "De probabiliteit bij een PDF wordt met andere woorden gegeven als het _volume onder de functie_.  \n",
     ":::\n",
     "\n",
     "Voor een uniforme distributie op interval $[a, b]$ met $b > a$ krijgen we:\n",
