--- a/book/math_foundations/labs/probability-joint.ipynb
+++ b/book/math_foundations/labs/probability-joint.ipynb
@@ -24,8 +24,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import plotly.express as px\n",
-    "from scipy import stats\n",
     "\n",
     "# Set random seed\n",
     "rng = np.random.default_rng(42)"
@@ -36,18 +34,30 @@
    "id": "bfeedb68",
    "metadata": {},
    "source": [
-    "## Gezamenlijke Kansverdeling: Twee Dobbelstenen\n",
+    "## Gezamenlijke Kansverdeling: Weer en Verplaatsingsmodus\n",
     "\n",
-    "Wanneer we twee eerlijke dobbelstenen gooien, hebben we te maken met twee random variabelen. De gezamenlijke verdeling beschrijft de kans op elke mogelijke combinatie.\n",
+    "Wanneer we de relatie tussen weertype en verplaatsingsmodus bekijken, hebben we te maken met twee random variabelen. De gezamenlijke verdeling beschrijft de kans op elke mogelijke combinatie.\n",
+    "\n",
+    "**Scenario:**\n",
+    "- **X (Weertype):** Zonnig (1), Bewolkt (2), Regenachtig (3)\n",
+    "- **Y (Verplaatsingsmodus):** Te voet (1), Auto (2), Tram/Bus (3), Trein (4)\n",
     "\n",
     "## ✍️\n",
-    "Construeer de joint probability table voor twee eerlijke dobbelstenen en beantwoord enkele kansberekening vragen."
+    "Construeer de joint probability table voor weertype en verplaatsingsmodus en beantwoord enkele kansberekening vragen.\n",
+    "\n",
+    "**Probabiliteitswaarden (matrix representatie):**\n",
+    "\n",
+    "|  | Te voet (y=1) | Auto (y=2) | Tram/Bus (y=3) | Trein (y=4) |\n",
+    "|---|---|---|---|---|\n",
+    "| **Zonnig (x=1)** | 0.20 | 0.10 | 0.12 | 0.08 |\n",
+    "| **Bewolkt (x=2)** | 0.10 | 0.08 | 0.08 | 0.04 |\n",
+    "| **Regenachtig (x=3)** | 0.03 | 0.07 | 0.07 | 0.03 |\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e32e0ba2",
+   "id": "6e4fe1e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -59,15 +69,15 @@
    "source": [
     "## ✍️\n",
     "Bereken de volgende kansen:\n",
-    "1. $P(x=6, y=6)$ - beide dobbelstenen tonen 6\n",
-    "2. $P(x + y = 7)$ - de som is 7\n",
-    "3. $P(x = y)$ - beide dobbelstenen tonen hetzelfde getal"
+    "1. $P(x=1, y=1)$ - zonnig weer EN te voet\n",
+    "2. $P(x=3, y \\in \\{2,3\\})$ - regenachtig EN (auto OF tram/bus)\n",
+    "3. $P(y=4)$ - trein (ongeacht het weer)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383debc6",
+   "id": "fecf4437",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -90,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c68bef62",
+   "id": "abdd2966",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,13 +117,13 @@
     "$$P(y|x) = \\frac{P(x, y)}{P(x)}$$\n",
     "\n",
     "## ✍️\n",
-    "Bereken en visualiseer de conditionele verdeling $P(y|x=4)$: wat is de kans op elke uitkomst van dobbelsteen 2, gegeven dat dobbelsteen 1 een 4 toont?"
+    "Bereken en visualiseer de conditionele verdeling $P(y|x=3)$: wat is de kans op elke verplaatsingsmodus, gegeven dat het regent?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9347442c",
+   "id": "258424d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c8619e9",
+   "id": "c2b97f6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -151,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96238a9a",
+   "id": "0f5b9717",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -175,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c8c9506",
+   "id": "4fc5f44a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,13 +201,13 @@
     "\n",
     "$$P(x, y) = P(y|x) \\cdot P(x) = P(x|y) \\cdot P(y)$$\n",
     "\n",
-    "Verifieer deze regel voor de dobbelsteen joint distributie."
+    "Verifieer deze regel voor de weersomstandigheden x verplaatsingsmodus joint distributie."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b6fd14",
+   "id": "de87781d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -218,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bd95eb6",
+   "id": "37573c5e",
    "metadata": {},
    "outputs": [],
    "source": []
