update cross entropy

--- a/book/math_foundations/prob/information.ipynb
+++ b/book/math_foundations/prob/information.ipynb
@@ -501,6 +501,8 @@
     "H(P, Q) = -\\int p(x) \\log q(x) dx\n",
     "$$\n",
     "\n",
+    "{u}`Waarom cross-entropie in plaats van KL divergentie?`\n",
+    "\n",
     "In machine learning wordt cross-entropie als _loss_ functie gebruikt waarbij:\n",
     "- $P$: de ware distributie van de trainingsdata voorstelt\n",
     "- $Q$: de distributie van de modelvoorspellingen voorstelt\n",
@@ -508,14 +510,21 @@
     "We willen de modelparameters en dus $Q$ zo kiezen, dat de cross-entropie minimaal wordt. Het minimaliseren van cross-entropie met betrekking tot $Q$ is _equivalent_ aan het minimaliseren van de KL divergentie, omdat $Q$ niet deelneemt aan de $H(P)$ term in {eq}`H_P_Q`:\n",
     "\n",
     "$$\n",
-    "\\arg\\min_Q H(P, Q) = \\arg\\min_Q D_{KL}(P \\parallel Q)\n",
+    "\\arg\\min_Q H(P, Q) = \\arg\\min_Q [H(P) + D_{KL}(P \\parallel Q)] = \\arg\\min_Q D_{KL}(P \\parallel Q)\n",
     "$$\n",
     "\n",
-    "We prefereren cross-entropie als loss functie in plaats van KL divergentie, omdat:\n",
-    "1. we $H(P)$ meestal niet kunnen berekenen (we kennen de ware distributie $P$ niet exact)\n",
-    "2. de term $H(P)$ toch een constante is tijdens optimalisatie (hangt niet af van modelparameters)\n",
-    "3. cross-entropie numeriek stabieler is en makkelijker te berekenen\n",
+    "De term $H(P)$ is een **constante** tijdens optimalisatie (hangt niet af van de modelparameters in $Q$), en valt dus weg bij het nemen van de afgeleide. We prefereren cross-entropie als loss functie omdat:\n",
+    "\n",
+    "1. **Berekenbaarheid**: We kunnen $H(P, Q) = -\\mathbb{E}_{x \\sim P}[\\log Q(x)]$ direct berekenen uit de trainingsdata, terwijl we voor KL divergentie ook $H(P) = -\\mathbb{E}_{x \\sim P}[\\log P(x)]$ zouden moeten kennen, maar we kennen de ware distributie $P$ niet exact (we hebben alleen samples)\n",
+    "\n",
+    "2. **Eenvoud**: Cross-entropie heeft een eenvoudigere implementatie - we hebben alleen de modelvoorspellingen $Q(x)$ en de labels nodig\n",
+    "\n",
+    "3. **Numerieke stabiliteit**: De formule is rechtstreekser en minder gevoelig voor numerieke fouten\n",
+    "\n",
+    "De volgende code demonstreert waarom beide loss functies tot dezelfde modelparameters leiden.\n",
     "  \n",
+    "{u}`Voorbeelden in klassificatie`\n",
+    "\n",
     "We zagen reeds het voorbeeld van cross-entropie _loss_ functies in de context van\n",
     "1. Binaire klassificatie (_binary cross-entropy_):\n",
     "$$\n",
